Input/literatur/Example_Library_STABCOOL/libraries/lib/MAIv2Win32/header/VBA/Realtime_Functions.BAS

Option Explicit 
Public Declare Function Realtime_AddTriggerEntry LIB "maiv2dll.DLL" (ByVal nInstance As Long, ByVal nChannelListEntry As Long, ByVal nStartTriggerAktiv As Long, ByVal dStartSchwellwert1 As Double, ByVal dStartSchwellwert2 As Double, ByVal nStartTriggerTyp As Long, ByVal nStartEnableAtStart As Long, ByVal nStartTriggerMessung As Long, ByVal nStartTriggerSetTTL As Long, ByVal nStartTriggerTTLKlemme As Long, ByVal nStartTriggerTTLZustand As Long, ByVal nStartTriggerTTLFlanke As Long, ByVal nStopTriggerAktiv As Long, ByVal dStopSchwellwert1 As Double, ByVal dStopSchwellwert2 As Double, ByVal nStopTriggerTyp As Long, ByVal nStopEnableAtStart As Long, ByVal nStopTriggerMessung As Long, ByVal nStopTriggerSetTTL As Long, ByVal nStopTriggerTTLKlemme As Long, ByVal nStopTriggerTTLZustand As Long, ByVal nStopTriggerTTLFlanke As Long, ByVal nRetriggerbar As Long, ByRef AOIndexInChannelsRTList As Long) As Long
Public Declare Function Realtime_AddFilterEntry LIB "maiv2dll.DLL" (ByVal nInstance As Long, ByVal AIChannelListEntry As Long, ByVal AIFilterMode As Long, ByVal AIFilterOrder As Long, ByRef AICoefficients As Double, ByVal AIOutputGainFactor As Double, ByRef AOIndexIndChannelsRTList As Long) As Long
Public Declare Function Realtime_DesignIIRFilter LIB "maiv2dll.DLL" (ByVal AISampleRate As Double, ByVal AIFilterType As Long, ByVal AICutoffFreqency As Double, ByVal AICutoffFreqency2 As Double, ByVal AIFrequenciesAreNormalized As Boolean, ByVal AIPassabsorbtion As Double, ByVal AIStopbandattenuation As Double, ByVal AIDesignMethod As Long, ByVal AIOrder As Long, ByRef AOFilterMode As Long, ByRef AOCoefficientsList As Double, ByRef AOGain As Double) As Long
Public Declare Function Realtime_DesignFIRFilter LIB "maiv2dll.DLL" (ByVal AISampleRate As Double, ByVal AIFilterType As Long, ByVal AICutoffFreqLow As Double, ByVal AICutoffFreqHigh As Double, ByVal AIFrequenciesAreNormalized As Boolean, ByVal AIOrder As Long, ByVal AIFilterWindow As Long, ByVal AIWindowParameter As Double, ByVal AIScalePassband As Boolean, ByRef AOFilterMode As Long, ByRef AOCoefficientsList As Double) As Long
Public Declare Function Realtime_AddPIDEntry LIB "maiv2dll.DLL" (ByVal nInstance As Long, ByVal nChannelListEntry As Long, ByVal dPAnteil As Double, ByVal dIAnteil As Double, ByVal dDAnteil As Double, ByVal nReglerArt As Long, ByVal Gain As Double, ByVal dSollwert As Double, ByVal dMinValue As Double, ByVal dMaxValue As Double, ByVal nDAKanal As Long, ByVal nSampleFreq As Double, ByRef AOIndexInChannelsRTList As Long) As Long
Public Declare Function Realtime_ChangePID_Params LIB "maiv2dll.DLL" (ByVal nInstance As Long, ByVal nChannelListEntry As Long, ByVal nIndexInChannelsRTList As Long, ByVal dPAnteil As Double, ByVal dIAnteil As Double, ByVal dDAnteil As Double) As Long
Public Declare Function Realtime_ChangePID_NominalValue LIB "maiv2dll.DLL" (ByVal nInstance As Long, ByVal nChannelListEntry As Long, ByVal nIndexInChannelsRTList As Long, ByVal dSollwert As Double) As Long
Public Declare Function Realtime_AddFFTEntry LIB "maiv2dll.DLL" (ByVal nInstance As Long, ByVal nChannelListEntry As Long, ByVal nAnzahlPunkte As Long, ByVal nSpektrum As Long, ByVal dGain As Double, ByVal nFensterFunktion As Long, ByVal dParameter As Double, ByRef AOIndexInChannelsRTList As Long) As Long
Public Declare Function Realtime_FFT_ReadData LIB "maiv2dll.DLL" (ByVal nInstance As Long, ByVal nChannelListEntry As Long, ByRef FFTData As Double, ByRef nNumberOfValues As Long) As Long
